# Matrix

./: .gitignore  CMakeLists.txt  LICENSE
.github/workflows/: main.yml
include/: sparse_infinite_matrix.h
src/: main.cpp  sparse_infinite_matrix.cpp
